Part 3 - Core elements/echo-server-pod-with-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: training
---
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: echo-server-po
spec:
  containers:
    - image: landrzejewski/echo-server:v1
      name: echo-server
      ports:
        - containerPort: 8080
