Part 3 - Core elements/echo-server-service-with-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  type: NodePort
  selector:
    app-name: echo-server-app
  ports:
    - port: 80
      targetPort: http #8080
      nodePort: 30000
