Part 3 - Core elements/service-for-external-api.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: extrenal-api-svc
subsets:
  - addresses:
      - ip: 212.77.98.9
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: extrenal-api-svc
spec:
  ports:
    - port: 80
