Part 3 - Core elements/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  selector:
    app-name: web-server-app
  ports:
    - port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /echo
            backend:
              serviceName: echo-service
              servicePort: 80
          - path: /web/(.*)
            backend:
              serviceName: web-server-service
              servicePort: 80
